--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.9",
     "node-sass": "^6.0.1",
     "project-name-generator": "^2.1.9",
+    "random-number": "0.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
