--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "copy-to-clipboard": "^3.3.1",
     "firebase": "^8.7.1",
     "formik": "^2.2.9",
     "node-sass": "^6.0.1",
