--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "formik": "^2.2.9",
     "node-sass": "^6.0.1",
     "project-name-generator": "^2.1.9",
+    "query-string": "^7.0.1",
     "random-number": "0.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "shortid": "^2.2.16",
+    "socket.io-client": "^4.3.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
