--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@dicebear/avatars-female-sprites": "^4.7.2",
     "@dicebear/avatars-male-sprites": "^4.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -39,9 +40,9 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.5",
     "prettier": "2.8.7",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "vite": "^4.3.5"
   },
   "eslintConfig": {
     "extends": [
